# ai-foundry-config-testing

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bicep-landing-zone.yml  bicep-main-option-1.yml  bicep-main-option-10.yml  bicep-main-option-11-part0.yml  bicep-main-option-11-part1.yml  bicep-main-option-11-part2.yml  bicep-main-option-2.yml  bicep-main-option-3.yml  bicep-main-option-4.yml  bicep-main-option-5.yml  bicep-main-option-6.yml  bicep-main-option-7.yml  bicep-main-option-8.yml  bicep-main-option-9.yml  bicep-option-create-projects.yml  bicep-option-deploy-vm.yml  bicep-option-destroy-caphost.yml  bicep-option-litellm.yml  bicep-option-separate-dns.yml  bicep-validate-reusable.yml
agents/: .env.example  AzureStandardLogicAppTool.py  agent.py  mcp.py  pyproject.toml  testing-agents.ipynb  testing-embeddings.ipynb  weather.json
agents_v2/: .env.example  gateway-random-traffic.ipynb  main.py  pyproject.toml  testing-llm-gateway-agents.ipynb
agents_v2/src/: agents_utils.py  foundry_utils.py
options-infra/: bicepconfig.json  landing-zone.bicep  main-option-1.bicep  main-option-10.bicep  main-option-11-part0.bicep  main-option-11-part1.bicep  main-option-11-part2.bicep  main-option-2-subscription.bicep  main-option-2.bicep  main-option-3.bicep  main-option-4.bicep  main-option-5.bicep  main-option-6.bicep  main-option-7.bicep  main-option-8.bicep  main-option-9.bicep  main.-option-4.bicepparam  main.bicep  main.bicepparam  temp.bicep
utils/: .env.example  README.md  network-secured-agent-setup.ipynb  network-secured-agent.http  test.http
(+107 files in other folders)
